@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - fixed updating of hosts (Eugene)
  - removed bulkloader (Eugene)
  - improved editing of graphs (Eugene)
  - support of "-n" flag for ZABBIX server: change Node ID (Alexei)
